// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Layout can be rendered as home 1`] = `
<DocumentFragment>
  <div
    class="container"
  >
    <header
      class="header"
    >
      <h1
        class="heading2Xl"
      >
        [Translation for https://example.com/translations.ttl#appName does not exist]
      </h1>
    </header>
    <main>
      test
    </main>
  </div>
</DocumentFragment>
`;

exports[`Layout renders as non-home by default 1`] = `
<DocumentFragment>
  <div
    class="container"
  >
    <header
      class="header"
    >
      <h2
        class="headingLg"
      >
        <a
          class="colorInherit"
          href="/"
        >
          [Translation for https://example.com/translations.ttl#appName does not exist]
        </a>
      </h2>
    </header>
    <main>
      test
    </main>
    <div
      class="backToHome"
    >
      <a
        href="/"
      >
        ← Back to home
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Layout renders error if something goes wrong 1`] = `
<DocumentFragment>
  <div
    data-testid="error"
  >
    <h1
      data-testid="error-title"
    >
      <span
        resource=""
      />
    </h1>
  </div>
</DocumentFragment>
`;

exports[`Layout renders loading while fetching resource bundle 1`] = `
<DocumentFragment>
  <div
    data-testid="loading"
  >
    Loading...
  </div>
</DocumentFragment>
`;
